--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,5 @@
-
+FROM node:14-alpine
+WORKDIR /todo-app-front-end
+COPY node_modules.tar.gz ./todo-app-front-end
+EXPOSE 3000
+CMD [ "npm", "start" ]
