--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,5 +1,8 @@
-FROM node:14-alpine
-WORKDIR /todo-app-front-end
-COPY node_modules.tar.gz ./todo-app-front-end
+FROM node:14-alpine AS todofrontend
+
+ADD ./node_modules.tar.gz / 
+COPY  . /
+
 EXPOSE 3000
+
 CMD [ "npm", "start" ]
