--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,7 +1,7 @@
 FROM mjgargani/puppeteer:trybe1.0 AS todotests
 
-
-ADD ./node_modules.tar.gz /
-COPY . /
+WORKDIR /APP
+ADD ./node_modules.tar.gz .
+COPY . .
 
 CMD [ "npm", "test" ]
